erDiagram
    USER ||--o| CART : "has (0..1)"
    CART ||--o{ CART_PRODUCT : "contains"
    PRODUCT ||--o{ CART_PRODUCT : "is in"
    PRODUCT || --o| TAG_PRODUCT: "has (0..N)"
    TAG ||--o{ TAG_PRODUCT  : "is in"


    TAG_PRODUCT {
        int tag_id
        int product_id
    }

    TAG {
        int id
        string name
        DATETIME created_at
        DATETIME updated_at
    }

    USER {
        int id
        string email
        string password_hash
        string firstname 
        string lastname
        UserRole role
        DATETIME created_at 
        DATETIME updated_at
    }

    CART {
        int id
        int userId
        DATETIME created_at 
        DATETIME updated_at
    }

    PRODUCT {
        int id
        string name
        float price 
        int quantity
        string photo_name 
        bool is_available 
        string description 
        bool published  
        DATETIME created_at 
        DATETIME updated_at
    }

    CART_PRODUCT {
        int cartId
        int productId
        int quantity
    }
